# api/swagger.yml
@@ -79,6 +79,18 @@ paths:
             summary: Get user info
             tags:
                 - auth
+    /api/v1/stream:
+        post:
+            description: Creates a stream
+            operationId: PostCreateStreamRoute
+            responses:
+                "200":
+                    description: PostCreateStreamResponse
+                    schema:
+                        $ref: '#/definitions/createStreamResponse'
+            summary: Creates a stream
+            tags:
+                - stream
     /api/v1/stream/publish:
         post:
             description: Publishes a stream
@@ -114,6 +126,20 @@ paths:
             tags:
                 - stream
 definitions:
+    createStreamResponse:
+        properties:
+            id:
+                description: ID of stream
+                example: 891d37d3-c74f-493e-aea8-af73efd92016
+                format: uuid4
+                type: string
+            url:
+                description: URL of stream
+                example: url
+                type: string
+        required:
+            - id
+        type: object
     getUserInfoResponse:
         properties:
             email:
